Fixed HTML order and did vertical alignment on header.

--- a/styles.css
+++ b/styles.css
@@ -15,16 +15,37 @@
 .menu {
   display: flex;
   justify-content: space-between;
-  border: 1px solid #fff;  /* For debugging */
   width: 900px;
 }
 
 .links {
   display: flex;
   justify-content: flex-end;
-  border: 1px solid #fff /* For debugging */
 }
 
 .login {
   margin-left: 20px;
+}
+
+/* Header */
+
+.header-container {
+  color: #5995DA;
+  background-color: #D6E9FE;
+  display: flex;
+  justify-content: center;
+}
+
+.header {
+  width: 900px;
+  height: 300px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.social,
+.logo,
+.subscribe {
+  border: 1px solid #5995DA;
 }
